@@ -1,3 +1,10 @@
+2012-04-10 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
+
+	* Tools/make_strings/StringsFile.m
+	* Tools/pl.m
+	  some NSInteger -> NSUInteger changes to match return
+	  values of methods
+
 2012-04-07 13:54  theraven
 
 	* libs/base/trunk/Source/NSMethodSignature.m: Fix NSMethodSignature
